--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
                         <a href="#about" class="text-gray-700 hover:text-pink-500 transition-colors">About</a>
                         <a href="#contact" class="text-gray-700 hover:text-pink-500 transition-colors">Contact</a>
                     </div>
-                    <div class="flex items-center space-x-4">
-                        <a href="https://wa.me/6281234567890?text=Hello%20Trixy%20Nails%2C%20I%20want%20to%20book%20an%20appointment" target="_blank"> <a href="https://wa.me/6281319810565?text=Hello%20Trixy%20Nails%2C%20I%20want%20to%20book%20an%20appointment" target="_blank"> <a href="https://wa.me/6281319810565?text=Hello%20Trixy%20Nails%2C%20I%20want%20to%20book%20an%20appointment" target="_blank"> <button class="bg-pink-500 hover:bg-pink-600 text-white px-6 py-2 rounded-full transition-colors">
+                    <div class="flex items-center space-x-4"><a href="https://wa.me/6281234567890?text=Hello%20Trixy%20Nails%2C%20I%20want%20to%20book%20an%20appointment" target="_blank"> <a href="https://wa.me/6281319810565?text=Hello%20Trixy%20Nails%2C%20I%20want%20to%20book%20an%20appointment" target="_blank"> <a href="https://wa.me/6281319810565?text=Hello%20Trixy%20Nails%2C%20I%20want%20to%20book%20an%20appointment" target="_blank"> <button class="bg-pink-500 hover:bg-pink-600 text-white px-6 py-2 rounded-full transition-colors">
                                         Book Now
 </button></a></a></a>
                         <button class="md:hidden" aria-label="Menu">
@@ -97,6 +96,7 @@
                         <ul class="text-gray-500 text-sm list-disc list-inside">
                             <li>Russian Manicure</li>
                             <li>Gel Polish</li>
+                            <li>Base + Top Coat</li>
                             <li>Vitamin</li>
                         </ul>
                     </div>
@@ -114,7 +114,7 @@
                             <li>Russian Manicure</li>
                             <li>Gel Polish</li>
                             <li>Soft Gel Tip</li>
-                            <li>File + Top Coat</li>
+                            <li>Base + Top Coat</li>
                             <li>Vitamin</li>
                         </ul>
                     </div>
@@ -134,8 +134,8 @@
                         <ul class="text-gray-500 text-sm list-disc list-inside">
                             <li>Russian Manicure</li>
                             <li>Gel Polish</li>
-                            <li>Hard Tip</li>
-                            <li>File + Top Coat</li>
+                            <li>Soft Gel Tip</li>
+                            <li>Base + Top Coat</li>
                             <li>Vitamin</li>
                         </ul>
                     </div>
@@ -156,7 +156,6 @@
                             <li>Gel Polish</li>
                             <li>Custom Size</li>
                             <li>Alcohol, Stick, Mini Buffer</li>
-                            <li>Russian Manicure</li>
                             <li>Stick &amp; Gel Glue</li>
                         </ul>
                     </div>
@@ -204,35 +203,34 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 max-w-4xl mx-auto">
                         <!-- Column 1 -->
                         <ul class="space-y-4">
-                            <li class="bg-pink-50 px-6 py-4 rounded-full flex justify-between items-center hover:bg-pink-100 hover:shadow-md hover:scale-[1.02] transition duration-300 ease-in-out"><span class="text-pink-800 font-semibold">Overlay / BIAB</span><span class="text-pink-600 font-bold">Rp 50.000</span>
+                            <li class="bg-pink-50 px-6 py-4 rounded-full flex justify-between items-center hover:bg-pink-100 hover:shadow-md hover:scale-[1.02] transition duration-300 ease-in-out"><span class="text-pink-800 font-semibold">Overlay / BIAB</span><span class="text-pink-600 font-bold">Rp 5,000</span>
                             </li>
-                            <li class="bg-pink-50 px-6 py-4 rounded-full flex justify-between items-center hover:bg-pink-100 hover:shadow-md hover:scale-[1.02] transition duration-300 ease-in-out"><span class="text-pink-800 font-semibold">3D Art</span><span class="text-pink-600 font-bold">Rp 55.000</span>
+                            <li class="bg-pink-50 px-6 py-4 rounded-full flex justify-between items-center hover:bg-pink-100 hover:shadow-md hover:scale-[1.02] transition duration-300 ease-in-out"><span class="text-pink-800 font-semibold">3D Art</span><span class="text-pink-600 font-bold">Rp 5,000</span>
                             </li>
-                            <li class="bg-pink-50 px-6 py-4 rounded-full flex justify-between items-center hover:bg-pink-100 hover:shadow-md hover:scale-[1.02] transition duration-300 ease-in-out"><span class="text-pink-800 font-semibold">Art (Gel Polish)</span><span class="text-pink-600 font-bold">Rp 40.000</span>
+                            <li class="bg-pink-50 px-6 py-4 rounded-full flex justify-between items-center hover:bg-pink-100 hover:shadow-md hover:scale-[1.02] transition duration-300 ease-in-out"><span class="text-pink-800 font-semibold">Art (Gel Polish)</span><span class="text-pink-600 font-bold">Rp 3,500</span>
                             </li>
-                            <li class="bg-pink-50 px-6 py-4 rounded-full flex justify-between items-center hover:bg-pink-100 hover:shadow-md hover:scale-[1.02] transition duration-300 ease-in-out"><span class="text-pink-800 font-semibold">Ombre</span><span class="text-pink-600 font-bold">Rp 40.000</span>
+                            <li class="bg-pink-50 px-6 py-4 rounded-full flex justify-between items-center hover:bg-pink-100 hover:shadow-md hover:scale-[1.02] transition duration-300 ease-in-out"><span class="text-pink-800 font-semibold">Ombre</span><span class="text-pink-600 font-bold">Rp 4,000</span>
                             </li>
-                            <li class="bg-pink-50 px-6 py-4 rounded-full flex justify-between items-center hover:bg-pink-100 hover:shadow-md hover:scale-[1.02] transition duration-300 ease-in-out"><span class="text-pink-800 font-semibold">French Nails</span><span class="text-pink-600 font-bold">Rp 30.000</span>
+                            <li class="bg-pink-50 px-6 py-4 rounded-full flex justify-between items-center hover:bg-pink-100 hover:shadow-md hover:scale-[1.02] transition duration-300 ease-in-out"><span class="text-pink-800 font-semibold">French Nails</span><span class="text-pink-600 font-bold">Rp 3,000</span>
                             </li>
                         </ul>
                         <!-- Column 2 -->
                         <ul class="space-y-4">
-                            <li class="bg-pink-50 px-6 py-4 rounded-full flex justify-between items-center hover:bg-pink-100 hover:shadow-md hover:scale-[1.02] transition duration-300 ease-in-out"><span class="text-pink-800 font-semibold">Glitter / Foil</span><span class="text-pink-600 font-bold">Rp 20.000</span>
+                            <li class="bg-pink-50 px-6 py-4 rounded-full flex justify-between items-center hover:bg-pink-100 hover:shadow-md hover:scale-[1.02] transition duration-300 ease-in-out"><span class="text-pink-800 font-semibold">Glitter / Foil</span><span class="text-pink-600 font-bold">Rp 2,000</span>
                             </li>
-                            <li class="bg-pink-50 px-6 py-4 rounded-full flex justify-between items-center hover:bg-pink-100 hover:shadow-md hover:scale-[1.02] transition duration-300 ease-in-out"><span class="text-pink-800 font-semibold">Cat Eye</span><span class="text-pink-600 font-bold">Rp 25.000</span>
+                            <li class="bg-pink-50 px-6 py-4 rounded-full flex justify-between items-center hover:bg-pink-100 hover:shadow-md hover:scale-[1.02] transition duration-300 ease-in-out"><span class="text-pink-800 font-semibold">Cat Eye</span><span class="text-pink-600 font-bold">Rp 2,500</span>
                             </li>
-                            <li class="bg-pink-50 px-6 py-4 rounded-full flex justify-between items-center hover:bg-pink-100 hover:shadow-md hover:scale-[1.02] transition duration-300 ease-in-out"><span class="text-pink-800 font-semibold">Sticker</span><span class="text-pink-600 font-bold">Rp 10.000</span>
+                            <li class="bg-pink-50 px-6 py-4 rounded-full flex justify-between items-center hover:bg-pink-100 hover:shadow-md hover:scale-[1.02] transition duration-300 ease-in-out"><span class="text-pink-800 font-semibold">Sticker</span><span class="text-pink-600 font-bold">Rp 1,000</span>
                             </li>
-                            <li class="bg-pink-50 px-6 py-4 rounded-full flex justify-between items-center hover:bg-pink-100 hover:shadow-md hover:scale-[1.02] transition duration-300 ease-in-out"><span class="text-pink-800 font-semibold">Chrome</span><span class="text-pink-600 font-bold">Rp 40.000</span>
+                            <li class="bg-pink-50 px-6 py-4 rounded-full flex justify-between items-center hover:bg-pink-100 hover:shadow-md hover:scale-[1.02] transition duration-300 ease-in-out"><span class="text-pink-800 font-semibold">Chrome</span><span class="text-pink-600 font-bold">Rp 4,000</span>
                             </li>
                             <!-- Accessories in column 2 -->
-                            <li class="bg-pink-50 px-6 py-4 rounded-full flex justify-between items-center hover:bg-pink-100 hover:shadow-md hover:scale-[1.02] transition duration-300 ease-in-out"><span class="text-pink-800 font-semibold">Accessories</span><span class="text-pink-600 font-bold">Start from Rp 3.000</span>
+                            <li class="bg-pink-50 px-6 py-4 rounded-full flex justify-between items-center hover:bg-pink-100 hover:shadow-md hover:scale-[1.02] transition duration-300 ease-in-out"><span class="text-pink-800 font-semibold">Accessories</span><span class="text-pink-600 font-bold">Start from Rp 3,000</span>
                             </li>
                         </ul>
                     </div>
                     <!-- T&C note -->
-                    <p class="text-xs text-gray-400 text-center mt-12 italic" style="font-size: 17px;">
-      *All the prices listed above are for 10 nails </p>
+                    <p class="text-xs text-gray-400 text-center mt-12 italic" style="font-size: 17px;">*All the prices listed above are per 1 nails</p>
                 </div>
             </section>
         </section>
@@ -242,8 +240,7 @@
                 <div class="container mx-auto px-6">
                     <div class="text-center mb-12">
                         <h2 class="text-4xl md:text-5xl font-bold mb-4 text-pink-700">Gallery</h2>
-                        <p class="text-lg text-pink-600 max-w-xl mx-auto">
-        A peek into our nail art magic—swipe through the styles that speak to you. </p>
+                        <p class="text-lg text-pink-600 max-w-xl mx-auto">Browse here for your next nails idea</p>
                         <div class="w-24 h-1 mx-auto mt-6 bg-pink-300 rounded-full"></div>
                     </div>
                     <!-- Swiper Container -->
