--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </nav>
         <!-- Hero Section -->
-        <section id="home" class="pt-24 pb-20 hero-gradient text-white">
+        <section id="home" class="pt-24 pb-20 hero-gradient text-white" style="padding-top: 123px;">
             <div class="container mx-auto px-6">
                 <div class="flex flex-col md:flex-row items-center justify-between">
                     <div class="md:w-1/2 mb-10 md:mb-0">
@@ -44,7 +44,7 @@
                         <p class="text-xl mb-8 text-white/90">
                         Experience luxury nail care with our premium services. From classic manicures to stunning nail art, we bring your nail dreams to life. </p>
                         <div class="flex flex-col sm:flex-row sm:flex-wrap gap-4 w-full">
-                            <button onclick="generateCombo()" class="rainbow-button w-full sm:w-auto px-6 py-3 rounded-full font-semibold text-white shadow transition duration-300">
+                            <button onclick="generateCombo()" class="rainbow-button w-full sm:w-auto px-6 py-3 rounded-full font-semibold text-white shadow transition duration-300" style="padding-right: 22px; margin-right: 3px; right: 2px; top: 0px;">
                                 🎲 Randomize My Nails
 </button>
                             <div id="comboResult" class="text-center text-lg text-pink-700 font-medium bg-white/90 px-4 py-2 rounded-lg w-full sm:w-auto">
@@ -54,14 +54,29 @@
                     </div>
                     <div class="md:w-1/2 relative">
                         <div class="relative z-10">
-                            <img src="images/pexels-cottonbro-4813347.jpg" alt="Beautiful nail art design with pink and white colors" class="rounded-2xl shadow-2xl" loading="lazy" style="margin-top: -255px;">
-                            <div class="absolute -bottom-6 -right-6 bg-white p-6 rounded-2xl shadow-xl">
-                                <div class="text-center">
-                                    <div class="text-3xl font-bold text-pink-500">100+</div>
-                                    <div class="text-gray-600">Happy Clients
-                                        <p>and counting!</p>
-                                    </div>
-                                </div>
+</div>
+                    </div>
+                    <div class="absolute -bottom-6 -right-6 bg-white p-6 rounded-2xl shadow-xl" style="padding-top: 0px;">
+                        <div class="text-center">
+                            <div class="text-3xl font-bold text-pink-500">100+</div>
+                            <div class="text-gray-600">Happy Clients
+                                <p>and counting!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="absolute -bottom-6 -right-6 bg-white p-6 rounded-2xl shadow-xl">
+                        <div class="text-center">
+                            <div class="text-3xl font-bold text-pink-500">100+</div>
+                            <div class="text-gray-600">Happy Clients
+                                <p>and counting!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="absolute -bottom-6 -right-6 bg-white p-6 rounded-2xl shadow-xl">
+                        <div class="text-center">
+                            <div class="text-3xl font-bold text-pink-500">100+</div>
+                            <div class="text-gray-600">Happy Clients
+                                <p>and counting!</p>
                             </div>
                         </div>
                     </div>
